deps: add allure and kover